--- a/Articles/ArticleWebview/public/css/styles.css
+++ b/Articles/ArticleWebview/public/css/styles.css
@@ -9,21 +9,27 @@ span{
 
     display: inline !important;
     font-size: 38px !important;
-    font-family: 'Bree Serif', serif !important;
+    font-family: 'Ubuntu', sans-serif !important;
     line-height: 1.5em !important;
 }
 
 img{
 
-    width: 97vw !important;
+    width: 100vw !important;
     height: auto !important;
     margin-left: -16px !important;
     margin-bottom: 8px !important;
 }
 
+a{
+  color: #ff751a;
+  font-weight: bold;
+  text-decoration: none;
+}
+
 .featured{
 
-  width:100% !important;
+  width:104vw !important;
   margin-left: 0px !important;
   margin-right: 0px !important;
 }
@@ -34,17 +40,17 @@ img{
   margin-left: 24px !important;
   margin-top: 16px !important;
   font-size: 28px !important;
-  font-family: 'Bree Serif', serif;
+  font-family: 'Ubuntu', sans-serif !important;
   color: #8c8c8c !important;
 }
 
 .date{
 
   float: right !important;
-  margin-right: 24px !important;
+  margin-right: 0px !important;
   margin-top: 16px !important;
   font-size: 28px !important;
-  font-family: 'Bree Serif', serif;
+  font-family: 'Ubuntu', sans-serif;
   color: #8c8c8c !important;
 }
 
@@ -53,6 +59,7 @@ img{
   font-size: 56px !important;
   margin: 32px !important;
   padding-bottom: 16px !important;
+  font-weight: 650;
   font-family: 'Lobster',cursive !important;
 }
 
@@ -63,13 +70,13 @@ img{
   font-size: 38px !important;
   padding: 0px 32px 32px 32px !important;
   text-align: center !important;
-  font-family: 'Bree Serif', serif !important;
+  font-family: 'Ubuntu', sans-serif !important;
   line-height: 1.56em !important;
 }
 
 em{
   font-size: 38px !important;
-  font-family: 'Bree Serif', serif !important;
+  font-family: 'Ubuntu', sans-serif !important;
   line-height: 1.5em !important;
 }
 
@@ -103,4 +110,33 @@ em{
   height: auto !important;
   margin-left: -16px !important;
   margin-bottom: 8px !important;
+}
+
+.share-webview {
+  width: 100vw !important;
+  display: block !important;
+  padding: 1rem !important;
+}
+
+.share-icon {
+
+  font-size: 30px !important;
+  font-weight: bolder !important;
+}
+
+.share-webview-inner {
+  display: block !important;
+  width: 100vw !important;
+  font-size: 30px !important;
+  text-align: center !important;
+  border-width: 3px 0px !important;
+  border-color: black !important;
+  margin-bottom: 32px !important;
+  color: black !important;
+  font-weight: bold !important;
+}
+
+.share-link-footer {
+  text-decoration: none;
+  color: black;
 }
