--- a/Articles/ArticleWebview/views/article.pug
+++ b/Articles/ArticleWebview/views/article.pug
@@ -4,7 +4,8 @@ html
         meta(charset='UTF-8')
         title Article #{_id}
         link(rel='stylesheet', href='/css/styles.css')
-        link(href='https://fonts.googleapis.com/css?family=Bree+Serif|Lobster&display=swap',rel='stylesheet')
+        link(href='https://fonts.googleapis.com/css?family=Lobster|Ubuntu:300&display=swap',rel='stylesheet')
+        link(href='https://fonts.googleapis.com/icon?family=Material+Icons',rel='stylesheet')
 
     body
 
@@ -25,3 +26,8 @@ html
         span.date #{prettyDate(date)}
 
         span.content !{content}
+        span.share-webview
+          span.share-webview-inner
+            a.share-link-footer(href='/posts/render/' + _id + '/share')
+              i.material-icons.share-icon share
+              span &nbsp&nbspShare This Article
