--- a/Articles/ArticleWebview/public/css/styles.css
+++ b/Articles/ArticleWebview/public/css/styles.css
@@ -60,7 +60,7 @@ a{
   margin: 32px !important;
   padding-bottom: 16px !important;
   font-weight: 650;
-  font-family: 'Lobster',cursive !important;
+  font-family: 'Optima' !important;
 }
 
 .content{
