--- a/Articles/ArticleWebview/public/css/styles.css
+++ b/Articles/ArticleWebview/public/css/styles.css
@@ -116,6 +116,7 @@ em{
   width: 100vw !important;
   display: block !important;
   padding: 1rem !important;
+  font-size: 30px !important;
 }
 
 .share-icon {
