--- a/Articles/ArticleWebview/public/css/styles-dark.css
+++ b/Articles/ArticleWebview/public/css/styles-dark.css
@@ -70,7 +70,7 @@ a{
   float: left !important;
   display: block;
   font-size: 44px !important;
-  padding: 0px 32px 32px 32px !important;
+  padding: 0px 40px 40px 40px !important;
   text-align: center !important;
   font-family: 'Ubuntu', sans-serif !important;
   line-height: 1.8 !important;
@@ -141,5 +141,18 @@ em{
 
 .share-link-footer {
   text-decoration: none;
-  color: black;
+  color: white;
+}
+
+body{
+  background-color: #000 !important;
+  color: #FFF !important;
+}
+
+.author{
+  color: #acacac !important;
+}
+
+.date{
+  color: #acacac !important;
 }
