--- a/Articles/ArticleWebview/views/article-dark.pug
+++ b/Articles/ArticleWebview/views/article-dark.pug
@@ -3,7 +3,7 @@ html
     head
         meta(charset='UTF-8')
         title Article #{_id}
-        link(rel='stylesheet', href='/css/styles.css')
+        link(rel='stylesheet', href='/css/styles-dark.css')
         link(href='https://fonts.googleapis.com/css?family=Lobster|Ubuntu:300&display=swap',rel='stylesheet')
         link(href='https://fonts.googleapis.com/icon?family=Material+Icons',rel='stylesheet')
 
