--- a/Articles/ArticleWebview/public/css/styles.css
+++ b/Articles/ArticleWebview/public/css/styles.css
@@ -20,6 +20,7 @@ img{
     height: auto !important;
     margin-left: -16px !important;
     margin-bottom: 8px !important;
+    display: block;
 }
 
 a{
