--- a/Articles/ArticleWebview/views/article.pug
+++ b/Articles/ArticleWebview/views/article.pug
@@ -4,7 +4,7 @@ html
         meta(charset='UTF-8')
         title Article #{_id}
         link(rel='stylesheet', href='/css/styles.css')
-        link(href='https://fonts.googleapis.com/css?family=Noto+Serif|Roboto&display=swap',rel='stylesheet')
+        link(href='https://fonts.googleapis.com/css?family=Merriweather',rel='stylesheet')
         link(href='https://fonts.googleapis.com/icon?family=Material+Icons',rel='stylesheet')
 
     body
