--- a/Articles/ArticleWebview/public/css/styles-dark.css
+++ b/Articles/ArticleWebview/public/css/styles-dark.css
@@ -62,7 +62,7 @@ a{
   margin: 32px 32px 8px 32px !important;
   padding-bottom: 16px !important;
   font-weight: 650;
-  font-family: 'Noto Serif',serif !important;
+  font-family: 'Baufra' !important;
   line-height: 1.65em !important;
 }
 
@@ -73,7 +73,7 @@ a{
   font-size: 44px !important;
   padding: 0px 40px 40px 40px !important;
   text-align: center !important;
-  font-family: 'Roboto', sans-serif !important;
+  font-family: 'Helvetica' !important;
   line-height: 1.65em !important;
 }
 
