--- a/Articles/ArticleWebview/public/css/styles-dark.css
+++ b/Articles/ArticleWebview/public/css/styles-dark.css
@@ -10,7 +10,7 @@ span{
 
     display: inline !important;
     font-size: 38px !important;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: 'Merriweather Sans', sans-serif !important;
     line-height: 1.65em !important;
 }
 
@@ -42,7 +42,7 @@ a{
   margin-left: 24px !important;
   margin-bottom: 24px !important;
   font-size: 36px !important;
-  font-family: 'Roboto', sans-serif !important;
+  font-family: 'Dosis', sans-serif !important;
   color: #8c8c8c !important;
 }
 
@@ -52,7 +52,7 @@ a{
   margin-right: 24px !important;
   margin-bottom: 24px !important;
   font-size:36px !important;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Dosis', sans-serif;
   color: #8c8c8c !important;
 }
 
@@ -62,7 +62,7 @@ a{
   margin: 32px 32px 8px 32px !important;
   padding-bottom: 16px !important;
   font-weight: 650;
-  font-family: 'Baufra' !important;
+  font-family: 'Merriweather Sans', sans-serif !important;
   line-height: 1.65em !important;
 }
 
@@ -73,7 +73,7 @@ a{
   font-size: 44px !important;
   padding: 0px 40px 40px 40px !important;
   text-align: center !important;
-  font-family: 'Helvetica' !important;
+  font-family: 'Merriweather Sans', sans-serif !important;
   line-height: 1.65em !important;
 }
 
@@ -147,7 +147,7 @@ em{
 
 body{
   background-color: #181818 !important;
-  color: #FFF !important;
+  color: #ECECEC !important;
 }
 
 .author{
