--- a/Articles/ArticleWebview/views/article-dark.pug
+++ b/Articles/ArticleWebview/views/article-dark.pug
@@ -4,7 +4,7 @@ html
         meta(charset='UTF-8')
         title Article #{_id}
         link(rel='stylesheet', href='/css/styles-dark.css')
-        link(href='https://fonts.googleapis.com/css?family=Helvetica',rel='stylesheet')
+        link(link href="https://fonts.googleapis.com/css?family=Dosis|Merriweather+Sans|Montserrat&display=swap" rel="stylesheet")
         link(href='https://fonts.googleapis.com/icon?family=Material+Icons',rel='stylesheet')
 
     body
